--- a/styles/base.css
+++ b/styles/base.css
@@ -9,7 +9,7 @@ body::after {
     content: "";
     display: block;
     position: absolute;
-    background: url('img/img-back.jpg');
+    background: url('../img/img-back.jpg');
     opacity: 0.6;
     left: 0;
     top: 0;
@@ -145,9 +145,24 @@ footer {
     font-size: 12px;
 }
 
-#freepik a{
+#freepik a {
     text-decoration: none;
     color:silver;
+}
+
+.youtube {
+    position: relative; 
+    padding-bottom: 56.25%; 
+    height: 0; 
+    overflow: hidden;
+}
+
+.youtube iframe, .youtube object, .youtube embed { 
+    position: absolute; 
+    top: 0; 
+    left: 0%; 
+    width: 100%; 
+    height: 100%; 
 }
 
 @media (max-width: 576px) { 
@@ -186,5 +201,13 @@ footer {
     .text-and {
         margin-top: 20px;
         margin-bottom: 20px;
+    }
+
+    .youtube iframe, .youtube object, .youtube embed { 
+        position: absolute; 
+        top: 0; 
+        left: 5%; 
+        width: 90%; 
+        height: 90%; 
     }
 }
