--- a/styles/base.css
+++ b/styles/base.css
@@ -63,7 +63,7 @@ body::after {
 .text-nama {
     text-align: center;
     color: sienna;
-    font-size : 40px;
+    font-size : 30px;
     font-family: 'Grandstander', cursive;
 }
 
@@ -71,6 +71,7 @@ body::after {
     border-radius: 50%;
     margin-bottom: 10px;
     border: 5px solid sienna;
+    height: 250px;
 }
 
 #text-nama-ortu {
@@ -173,17 +174,18 @@ footer {
 
 .youtube {
     position: relative; 
-    padding-bottom: 56.25%; 
+    padding-bottom: 56.25%;
+    margin-bottom: -10%; 
     height: 0; 
     overflow: hidden;
 }
 
 .youtube iframe, .youtube object, .youtube embed { 
     position: absolute; 
-    top: 0; 
-    left: 0%; 
-    width: 100%; 
-    height: 100%; 
+    top: 11; 
+    left: 11%; 
+    width: 78%; 
+    height: 78%; 
 }
 
 @media (max-width: 576px) { 
@@ -250,5 +252,13 @@ footer {
     
     #image-gallery2, #image-gallery4, #image-gallery6 {
         margin-right: 0;
+    }
+
+    .youtube {
+        position: relative; 
+        padding-bottom: 56.25%;
+        margin-bottom: -5%; 
+        height: 0; 
+        overflow: hidden;
     }
 }
